cc: Skip ops with no decode available.

If a decoded image for a shader isn't available, skip the draw op
instead of rasterizing it without the shader.

Bug: 752729
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ia689a93536d09332f62dcd5e60a43b1674221a88
Reviewed-on: https://chromium-review.googlesource.com/611006
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: Vladimir Levin <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493574}
Former-commit-id: 6fa252c7503b24f2aad3735d3641b3dd04edf4c1